Updates the project routes, user routes, all and job handle bar files

--- a/views/job.handlebars
+++ b/views/job.handlebars
@@ -8,7 +8,7 @@
       {{experience_level}}
     </p>
     <p>
-      Guest:
+      Job Title
       {{job_title}}
     </p>
     {{#if has_salary_range}}
