Deploy in Heroku

--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -20,8 +20,8 @@
         {{experience_level}}
       </textarea>
       <br />
-      <label for='job_title'>
-        Job <Title></Title><Title></Title>
+      <label for='job_title'> <!-- Does it need to move up? -->
+        Job <Title></Title><Title></Title> <!-- Why repeating -->
       </label>
       <br />
       <textarea id='job_title' name='job_title' rows='2' cols='30'>
