Adds the login page handle bar files along with the login and logout JS files with the code

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 :root {
-    --primary: #389393;
-    --secondary: #f5a25d;
+    --primary: #4cc3c3;
+    --secondary: #f5bd5d;
     --tertiary: #fa7f72;
-    --quatrinary: #6c6b67;
+    --quatrinary: #6c6b67da;
     --light: #ebebeb;
     --dark: #182c23;
     --error: rgb(228, 46, 1);
