--- a/views/job.handlebars
+++ b/views/job.handlebars
@@ -1,15 +1,15 @@
 <div class="job-card">
   <div class="job-card-header">
-    {{job_category}}
+    {{industry}}
   </div>
   <div class="card-body">
     <p>
-      Experience Level
-      {{experience_level}}
+      Experience
+      {{experience}}
     </p>
     <p>
       Job Title
-      {{job_title}}
+      {{title}}
     </p>
     {{#if has_salary_range}}
       <p class="has-salary-range">
