Updates the jobsearch file with the logic to add jobs to the database and the handlebars with the search button

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary: #4cc3c3;
-    --secondary: #f5bd5d;
+    --secondary: #e48a3b;
     --tertiary: #fa7f72;
     --quatrinary: #6c6b67da;
     --light: #ebebeb;
