--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -125,6 +125,10 @@
       <button type='submit' value='Submit'>
         Submit
       </button>
+      <br />
+      <button type='search' value='Search'>
+        Submit
+      </button>
     </form>
   </div>
 </div>
