Updates post request

--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -8,9 +8,9 @@
         Job <Title></Title><Title></Title>
       </label>
       <br />
-      <textarea id='title' name='title' rows='2' cols='30'>
+      <input id='title' name='title' rows='2' cols='30'>
         {{title}}
-      </textarea>
+      </input>
       <br />
       <label for='industry'>
         Industry:
@@ -20,21 +20,21 @@
         <!--{{#each industry}}
         <option value={{industry.id}}>{{industry.name}}</option>
         {{/each}}   -->
-        <option value="sales">Sales</option>
-  <option value="it">IT</option>
-  <option value="management">Management</option>
-  <option value="manufacturing">Manufacturing</option>
-  <option value="engineering">Engineering</option>
-  <option value="businessdevelopment">Business Development</option>
-  <option value="production">Production</option>
-  <option value="finance">Finance</option>
-  <option value="marketing">Marketing</option>
-  <option value="softwaredevelopment">Software Development</option>
-  <option value="retail">Retail</option> 
-  <option value="banking">Banking</option>
-  <option value="businessconsulting">Business Consulting</option>
-  <option value="investmentmanagement">Investment Management</option>
-  <option value="professionalcoaching">Professional Coaching</option>  
+        <option value="Sales">Sales</option>
+        <option value="IT">IT</option>
+        <option value="Management">Management</option>
+        <option value="Manufacturing">Manufacturing</option>
+        <option value="Rngineering">Engineering</option>
+        <option value="Business Development">Business Development</option>
+        <option value="Production">Production</option>
+        <option value="Finance">Finance</option>
+  <option value="Marketing">Marketing</option>
+  <option value="Software Development">Software Development</option>
+  <option value="Retail">Retail</option> 
+  <option value="Banking">Banking</option>
+  <option value="Business Consulting">Business Consulting</option>
+  <option value="Investment Management">Investment Management</option>
+  <option value="Professional Coaching">Professional Coaching</option>  
       </select>
       <br />
       <label for='experience'>
@@ -43,12 +43,12 @@
       <br />
       <select id='experience' name='experience' rows='5' cols='30'>
         {{experience}}
-        <option value="internship">Internship</option>
-        <option value="entry">Entry</option>
-        <option value="associate">Associate</option>
-        <option value="mid-Senior">Mid-Senior</option>
-        <option value="director">Director</option>
-        <option value="executive">Executive</option>
+        <option value="Internship">Internship</option>
+        <option value="Entry">Entry</option>
+        <option value="Associate">Associate</option>
+        <option value="Mid-Senior">Mid-Senior</option>
+        <option value="Director">Director</option>
+        <option value="Executive">Executive</option>
       </select>
       <br />
      
@@ -98,9 +98,9 @@
       <br />
       <select id='isRemote' name='isRemote' rows='2' cols='30'>
         {{isRemote}}
-        <option value="onsite">On-site</option>
-        <option value="remote">Remote</option>
-        <option value="hybrid">Hybrid</option>
+        <option value="On-Site">On-site</option>
+        <option value="Remote">Remote</option>
+        <option value="Hybrid">Hybrid</option>
       </select>
       <br />
       {{!-- <input type='checkbox' id='has_salary_range' name='has_salary_range' value='true' />
@@ -114,20 +114,20 @@
       <br />
       <select id='hours' name='hours' rows='2' cols='30'>
         {{hours}}
-        <option value="fulltime">Full-time</option>
-        <option value="parttime">Part-time</option>
-        <option value="contract">Contract</option>
-        <option value="temporary">Temporary</option>
-        <option value="volunteer">Volunteer</option>
-        <option value="internship">Internship</option>
+        <option value="Full-time">Full-time</option>
+        <option value="Part-time">Part-time</option>
+        <option value="Contract">Contract</option>
+        <option value="Temporary">Temporary</option>
+        <option value="Volunteer">Volunteer</option>
+        <option value="Internship">Internship</option>
       </select>
       <br />
       <button type='submit' value='Submit'>
         Submit
       </button>
       <br />
-      <button type='search' value='Search'>
-        Submit
+      <button type='submit' value='Search'>
+        Search
       </button>
     </form>
   </div>
