--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,15 @@
       <h1>
         Job Search Engine
       </h1>
+      <nav>
+        <!-- Conditionally render login or logout links -->
+        {{#if logged_in}}
+        <a href="/profile">profile</a> |
+        <button class="no-button" id="logout">logout</button>
+        {{else}}
+        <a href="/login">login</a>
+        {{/if}}
+      </nav>
     </header>
       <main class="container container-fluid mt-5">
         {{{ body }}}
