Tried fixing the login. Didn't work. Tried adding a search function. Didn't work. Give this a pass?

--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -126,7 +126,10 @@
         Submit
       </button>
       <br />
-      <button type='submit' value='Search'>
+      <label>Search for jobs by title</label>
+      <br />
+      <input type="text" id="searchContent">
+      <button id="search" type='submit' value='Search'>
         Search
       </button>
     </form>
