Fixes search function

--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -126,6 +126,9 @@
         Submit
       </button>
       <br />
+      
+    </form>
+    <form class="jobsearch">
       <label>Search for jobs by title</label>
       <br />
       <input type="text" id="searchContent">
@@ -137,3 +140,4 @@
 </div>
 
 <script src='/js/jobsearch.js'></script>
+<script src="/js/search.js"></script>
