--- a/views/job.handlebars
+++ b/views/job.handlebars
@@ -16,5 +16,8 @@
         Salary Range provided
       </p>
     {{/if}}
+    <button>Edit</button>
+    <button>Delete</button>
+  <!--Add the routes to allow put and delete requests for each job -->
   </div>
 </div>
