--- a/views/partials/layout.handlebars
+++ b/views/partials/layout.handlebars
@@ -1,34 +1,29 @@
+ <!--Search and add jobs layout-->  
 <div class="tile is-ancestor">
     <div class="tile is-4 is-vertical is-parent">
-      <div class="tile is-child notification has-background-link-light">
-        <form class="jobsearch">
-        <p class="title">Search Jobs</p>
-        <input class="input" type="text" placeholder="Search by Job Title" id="searchContent">
-        <button class="button" id="search" type='submit' value='Search'>Search</button>
+      <div class="tile is-child box">
+        <p class="title">Search</p>
+        <input class="input" type="text" placeholder="Search by Job Title">
+        <button class="button">Button</button>
       </div>
       <div class="tile is-child box">
         <figure class="image is-128x128">
-            <img src="/assets/imgs/pic.jpg">
+            <img src="https://bulma.io/images/placeholders/128x128.png">
           </figure>
-      </form>
       </div>
     </div>
-
     <div class="tile is-parent">
-      <div class="tile is-child box has-background-link-light">
+      <div class="tile is-child box">
         <p class="title">Add Jobs</p>
         <div class="field">
-          <form class='new-job-form'>
             <label class="label">Title</label>
             <div class="control">
-              <input class="input" type="text" placeholder="Title" id='title' name='title' rows='2' cols='30'>
-              {{title}}
+              <input class="input" type="text" placeholder="Title">
             </div>
 
             <label class="label">Industry</label>
             <div class="select">
-                <select id='industry' name='industry' rows='2' cols='30'>
-                  {{industry}}
+                <select>
                   <option>Industry</option>
                   <option value="Sales">Sales</option>
                   <option value="IT">IT</option>
@@ -50,8 +45,7 @@
 
               <label class="label">Experience</label>
             <div class="select">
-                <select id='experience' name='experience' rows='5' cols='30'>
-                  {{experience}}
+                <select>
                   <option>Experience</option>
                   <option value="Internship">Internship</option>
                 <option value="Entry">Entry</option>
@@ -64,64 +58,42 @@
 
             <label class="label">Minimum Salary</label>
             <div class="control">
-              <input class="input" type="text" placeholder="Minimum Salary" id='minSalary' name='minSalary' rows='2' cols='30'>
-              {{minSalary}}
+              <input class="input" type="text" placeholder="Minimum Salary">
             </div>
 
             <label class="label">Maximum Salary</label>
             <div class="control">
-              <input class="input" type="text" placeholder="Maximum Salary" id='maxSalary' name='maxSalary' rows='2' cols='30'>
-              {{maxSalary}}
+              <input class="input" type="text" placeholder="Maximum Salary">
             </div>
 
             <label class="label">Employer</label>
             <div class="control">
-              <input class="input" type="text" placeholder="Employer" id='employer' name='employer' rows='2' cols='30'>
-              {{employer}}
+              <input class="input" type="text" placeholder="Employer">
             </div>
             
             <label class="label">City</label>
             <div class="control">
-              <input class="input" type="text" placeholder="City" id='city' name='city' rows='2' cols='30'>
-              {{city}}
+              <input class="input" type="text" placeholder="City">
             </div>
 
             <label class="label">State</label>
             <div class="control">
-              <input class="input" type="text" placeholder="State" id='state' name='state' rows='2' cols='30'>
-              {{state}}
+              <input class="input" type="text" placeholder="State">
             </div>
 
             <label class="label">Is Remote</label>
             <div class="select">
-                <select id='isRemote' name='isRemote' rows='2' cols='30'>
-                  {{isRemote}}
+                <select>
                   <option>Is Remote</option>
                   <option value="On-Site">On-site</option>
                 <option value="Remote">Remote</option>
                 <option value="Hybrid">Hybrid</option>
                 </select>
             </div>
-
-            <label class="label">Hours</label>
-            <div class="select">
-                <select id='hours' name='hours' rows='2' cols='30'>
-                  {{hours}}
-                  <option value="Full-time">Full-time</option>
-                  <option value="Part-time">Part-time</option>
-                  <option value="Contract">Contract</option>
-                  <option value="Temporary">Temporary</option>
-                  <option value="Volunteer">Volunteer</option>
-                  <option value="Internship">Internship</option>
-                </select>
-            </div>
-
-            <button class="button" type='submit' value='Submit'>Submit</button>
-            </form>
       </div>
     </div>
   </div>
 
-
-<script src='/js/jobsearch.js'></script>
-<script src="/js/search.js"></script>
+  <script src="./js/jobsearch.js"></script>
+  <script src="/js/search.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
