--- a/views/all.handlebars
+++ b/views/all.handlebars
@@ -7,8 +7,8 @@
         <button class="button" id="search" type='submit' value='Search'>Search</button>
       </div>
       <div class="tile is-child box">
-        <figure class="image is-128x128">
-            <img src="/assets/imgs/pic.jpg">
+        <figure class="image is-450x700">
+            <img src="/images/pic1.jpg">
           </figure>
       </form>
       </div>
