--- a/views/job.handlebars
+++ b/views/job.handlebars
@@ -2,7 +2,7 @@
     <div class="tile is-4 is-vertical is-parent">
       <div class="tile is-child notification has-background-link-light">
         <form class="job-card">
-        <h1 class="job-card-header" style="font-style:italic;">Job Submitted</h1>
+        <h1 class="job-card-header" style="font-style:italic;">Job Details</h1>
      </br>   
     <h1 style="color: rgba(0, 0, 255, 0.424) ;">
       Industry: 
