--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link rel="stylesheet" href="./css/styles.css">
   
   <title>Job Search Engine</title>
   <link rel="stylesheet" href="/css/jass.css">
@@ -32,6 +31,11 @@
       </nav>
     </header>
 
+    <image class="picture">
+      {{> image }}
+    </image>
+
+  </br>
   
       <main>
         {{{ body }}}
