--- a/views/partials/image.handlebars
+++ b/views/partials/image.handlebars
@@ -1,8 +1,9 @@
-<!--Hero image -->
-  
-    <img src="/assets/imgs/pic.jpg" alt="Job Search" style="height: 500px; width: 100%;">
+<!--Hero image 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>-->
+    <img src="/images/pic.jpg" alt="Job Search" style="height: 500px; width: 100%;" />
  
+ <!--style="height: 500px; width: 100%;"
 
   <script src="./js/jobsearch.js"></script>
-  <script src="/js/search.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/search.js"></script>-->
+  
